# gst-plugins-espeak

./: .gitignore  AUTHORS  ChangeLog  HACKING  NEWS  README  README.md  autogen.sh  configure.ac  sweets.recipe
service/: service.info
src/: Makefile.am  espeak.c  espeak.h  gstespeak.c  gstespeak.h  slist.h  spin.c  spin.h  text.h
